--- a/templates/base.html
+++ b/templates/base.html
@@ -39,12 +39,6 @@
         h1 {
             color: #343a40;
         }
-        .balance {
-            text-align: right;
-            font-size: 1.2em;
-            color: #007bff;
-            margin: 1em 0;
-        }
         .transaction-table {
             width: 100%;
             border-collapse: collapse;
@@ -96,6 +90,16 @@
             color: #155724;
             border: 1px solid #c3e6cb;
         }
+        .balance {
+            margin: 10px;
+            padding: 10px;
+            max-width: 100px;
+            background-color: #007bff;
+            color: white;
+            border-radius: 5px;
+            text-align: center;
+            font-size: 20px;
+        }
     </style>
 </head>
 <body>
@@ -106,18 +110,16 @@
         <a href="{% url 'index' %}">Home</a>
         <a href="{% url 'add_expense' %}">Add Expense</a>
         <a href="{% url 'add_income' %}">Add Income</a>
+        <a href="{% url 'history' %}">History</a>
     </div>
-    
     <div class="container">
-        <div class="div_mess">
-            {% if messages %}
-            <div class="messages">
-                {% for message in messages %}
-                <div class="message {{ message.tags }}">{{ message }}</div>
-                {% endfor %}
-            </div>
-            {% endif %}
+        {% if messages %}
+        <div class="messages">
+            {% for message in messages %}
+                <div class="{{ message.tags }}">{{ message }}</div>
+            {% endfor %}
         </div>
+        {% endif %}
         <div class="balance">
             Balance: ${{ balance }}
         </div>
