--- a/templates/base.html
+++ b/templates/base.html
@@ -100,6 +100,14 @@
             text-align: center;
             font-size: 20px;
         }
+        .chart-container {
+            width: 50%;
+            margin: 0 auto;
+        }
+        #transactionChart {
+            max-width: 100%;
+            max-height: 400px;
+        }
     </style>
 </head>
 <body>
@@ -125,5 +133,6 @@
         </div>
         {% block content %}{% endblock %}
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </body>
 </html>
