--- a/templates/history/index.html
+++ b/templates/history/index.html
@@ -3,6 +3,14 @@
 {% block title %}Transaction History{% endblock %}
 
 {% block content %}
+<div class="row">
+    <div class="col-md-12">
+        <div class="chart-container">
+            <canvas id="transactionChart"></canvas>
+        </div>
+    </div>
+</div>
+
 <h1>Expenses</h1>
 <table class="transaction-table">
     <tr>
@@ -54,4 +62,45 @@
     </tr>
     {% endfor %}
 </table>
+
+<script>
+    const ctx = document.getElementById('transactionChart').getContext('2d');
+    const transactionChart = new Chart(ctx, {
+        type: 'pie',
+        data: {
+            labels: ['Expenses', 'Incomes'],
+            datasets: [{
+                label: 'Transactions',
+                data: [{{ total_expenses }}, {{ total_incomes }}],
+                backgroundColor: ['#dc3545', '#28a745'],
+                hoverOffset: 4
+            }]
+        },
+        options: {
+            responsive: true,
+            plugins: {
+                legend: {
+                    position: 'right',
+                    labels: {
+                        color: '#343a40'
+                    }
+                },
+                tooltip: {
+                    callbacks: {
+                        label: function(context) {
+                            let label = context.label || '';
+                            if (label) {
+                                label += ': ';
+                            }
+                            if (context.parsed !== null) {
+                                label += '$' + context.parsed;
+                            }
+                            return label;
+                        }
+                    }
+                }
+            }
+        }
+    });
+</script>
 {% endblock %}
