--- a/templates/history/add_income.html
+++ b/templates/history/add_income.html
@@ -34,6 +34,14 @@
         </div>
     </div>
     <div>
+        <label for="currency">Currency:</label>
+        {{ form.currency }}
+    </div>
+    <div>
+        <label for="payment_method">Payment Method:</label>
+        {{ form.payment_method }}
+    </div>
+    <div>
         {{ form.image.label_tag }}
         {{ form.image }}
     </div>
