--- a/templates/history/history.html
+++ b/templates/history/history.html
@@ -14,8 +14,8 @@
 </form>
 
 <h2 class="animate__animated animate__fadeIn">Summary</h2>
-<p>Total Incomes: ${{ total_incomes }}</p>
-<p>Total Expenses: ${{ total_expenses }}</p>
+<p>Total Incomes: ${{ total_incomes|floatformat:2 }}</p>
+<p>Total Expenses: ${{ total_expenses|floatformat:2 }}</p>
 
 <h2 class="animate__animated animate__fadeIn">Expenses</h2>
 <table class="transaction-table table table-hover">
@@ -32,7 +32,7 @@
         {% for expense in expenses %}
         <tr>
             <td>{{ expense.date }}</td>
-            <td>{{ expense.amount }}</td>
+            <td>{{ total_incomes|floatformat:2 }} {{ currency }}</td>
             <td>{{ expense.expense_type }}</td>
             <td>{% if expense.image %}<img src="{{ expense.image.url }}" alt="Expense Image" width="50">{% endif %}</td>
             <td class="action-buttons">
@@ -59,15 +59,20 @@
         {% for income in incomes %}
         <tr>
             <td>{{ income.date }}</td>
-            <td>{{ income.amount }}</td>
+            <td>{{ total_incomes|floatformat:2 }} {{ currency }}</td>
             <td>{{ income.income_type.name }}</td>
-            <td>{% if income.image %}<img src="{{ income.image.url }}" alt="Income Image" width="50">{% endif %}</td>
-            <td class="action-buttons">
+            <td>
+                {% if income.image %}
+                  <img src="{{ income.image.url }}" alt="Income Image" width="50">
+                {% endif %}
+              </td>            <td class="action-buttons">
                 <a href="{% url 'edit_income' income.pk %}" class="btn btn-success">Edit</a>
                 <a href="{% url 'delete_income' income.pk %}" class="btn btn-danger">Delete</a>
             </td>
         </tr>
         {% endfor %}
+        <img src="/media/incomes/.jpg" alt="Income Image" width="50">
+
     </tbody>
 </table>
 {% endblock %}
